--- a/Front-end/public/change.css
+++ b/Front-end/public/change.css
@@ -1,11 +1,9 @@
-
 body {
     font-family: "Roboto Condensed", sans-serif;
     background-color: #f4f4f4;
     text-align: center;
     padding: 20px;
 }
-
 h1,label,p,input,button  {
     font-family: Roboto Condensed, serif;
     font-optical-sizing: auto;
@@ -13,43 +11,31 @@ h1,label,p,input,button  {
     font-style: normal;
   }
 
+
 h1 {
-    color: #333;
     margin-bottom: 20px;
+    color: #333;
 }
 
 form {
     background: white;
-    padding: 25px;
+    padding: 35px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    max-width: 700px;
     margin: auto;
     text-align: left;
 }
 
-.label1, .label2 {
-    font-weight: bold;
-    margin-bottom: 5px;
-    display: block;
-}
 
-input[type="password"] {
-    width: 100%;
-    padding: 12px;
-    margin: 8px 0 15px;
+input {
+    margin-bottom: 16px;
+    padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 14px;
+    border-radius: 4px;
+    font-size: 16px;
 }
 
-.motsdepass {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    font-size: 14px;
-    margin-bottom: 15px;
-}
 
 
 button {
@@ -65,27 +51,31 @@ button {
 }
 
 button:hover {
-    background: #0056b3;
+    background-color:#0056b3;
 }
 
-#message {
-    color: red;
-    font-weight: bold;
-    margin-bottom: 10px;
+.motsdepass {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 14px;
+    margin-bottom: 15px;
 }
+
+
+
 
 @media (max-width: 480px) {
     form {
+        padding: 15px;
         width: 90%;
-        padding: 20px;
     }
-    
+
     button {
         font-size: 14px;
         padding: 10px;
     }
 }
-
 input[type="password"],
 input[type="text"] {
     width: 100%;
@@ -94,4 +84,13 @@ input[type="text"] {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 14px;
+}
+.label{
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+}
+
+label{
+    margin-bottom: 10px;
 }
